css/style.css
:root {
  /* color palette */
  --white: #ffffff;
  --black: #080808;
  --red: #ff0000;
  --green: #008000;
  --gray: #808080;
  --light-gray: #d6d6d6;
  --purple: #800080;
  --pink: #ffc0cb;
  --brown: #a52a2a;
  --light-blue: #b4d0e7;
  --blue: #2e2ec1;
  --sky-light-blue: #52a6e7;
  --pastel-green: #a2d39b;
  --pastel-green-secondary: #c7f6c1;
  --aubergine: #61082b;
  --sky-blue: #0093ce;
  --bright-red: #ff1c1c;
  --darker-red: #c80606;
  --lighter-blue: #288ff6;
  --dark-blue: #1a1a8a;
  --yellow: #eeba72;
  --light-purple: #9792e4;

  /* web site color palette */
  --side-bar-primary: #051e34;
  --side-bar-secondary: #11283e;
  --header-primary: #1b72e8;
  --header-secondary: #15396b;
  --navbar-white: #e7e9ec;
  --table-button-background: #f48272;

  /* layout */
  --navbar: 80px;
  --small-side-bar: 60px;
  --big-side-bar: 120px;

  /* bootstrap */
  /* --bs-breadcrumb-divider: ">>"; */
}

/* ** reset */

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

/* ** general */

/* * navbar */

#navbar {
  height: var(--navbar);
  /* background-color: var(--navbar-white); */
}

#navbar .navbar_content {
  width: 100%;
}

#navbar .navbar-collapse {
  flex-grow: 0;
}

#navbar .btn-custom-dropdown {
  width: 50px;
  height: 50px;
}

#navbar .btn-check:checked + .btn,
.btn.active,
.btn.show,
.btn:first-child:active,
:not(.btn-check) + .btn:active {
  border: 0;
}

#navbar .dropstart .dropdown-menu[data-bs-popper] {
  top: 50px;
  right: 0;
}

#navbar .yellow_icon {
  color: var(--yellow);
}

/* * main */

#main {
  height: calc(100vh - var(--navbar));
}

/* side_bar */

#side_bar {
  width: var(--small-side-bar);

  background-color: var(--side-bar-primary);
  color: var(--white);
}

/* ! mi aggiunge il background nell'inspector ma non qui */
#side_bar > .side_bar_background {
  background-image: url("./img/sidebar-bg.png");
}

#side_bar i {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
}

#side_bar .side_bar_option {
  width: 100%;
}

#side_bar .side_bar_option:hover {
  background-color: rgba(128, 128, 128, 0.773);
}

/* * main_content */

#main > .main_content {
  width: calc(100% - var(--small-side-bar));
  overflow-y: auto;
}

/* header */

#header {
  background-color: var(--header-primary);
  color: var(--white);
}

#header .badge {
  background-color: var(--header-secondary);
}

#header .breadcrumb-item + .breadcrumb-item::before {
  color: var(--white);
}

#header ul {
  list-style: none;
  padding: 0;
}

#header li {
  float: left;
  margin-right: 0.25rem;
}

/* content */

/* first column */

/* first card */

/* table */

#content .table_rounded {
  background-color: var(--table-button-background);
  color: var(--white);
  height: 2rem;
  aspect-ratio: 1 / 1;
  display: inline-block;

  border-radius: 50%;
  position: relative;
}

/* second card */

#content .btn.btn_collapse {
  width: 100%;
  border-bottom: 1px solid rgba(0, 0, 0, 0.175);
  border-radius: 0;
}

/* second column */

/* first card */

/* * offcanvas right */

.offcanvas.offcanvas-end {
  border-left: 0;
}

#offcanvasRight .btn_custom_form_button {
  width: 100%;
}

/* ** breakpoint */

@media screen and (min-width: 576px) {
}

@media screen and (min-width: 768px) {
}

@media screen and (min-width: 992px) {
  /* * navbar */

  /* * side_bar */
  #side_bar {
    width: var(--big-side-bar);
  }
  /* * main_content */
  #main > .main_content {
    width: calc(100% - var(--big-side-bar));
    overflow-y: auto;
  }
}

@media screen and (min-width: 1200px) {
}

@media screen and (min-width: 1400px) {
}

/* ** debug */

/* height */

.debug .smaller {
  height: 50px;
}

.debug .small {
  height: 80px;
}

.debug .tall {
  height: 300px;
}

.debug .taller {
  height: 500px;
}

